<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">MyFeralPractice</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_to_register">登录注册</string>
    <string name="speed_registered">极速注册</string>
    <string name="login">登录</string>
    <string name="register">注册</string>
    <string name="login_immediately">立即登录</string>
    <string name="forgot_password">忘记密码?</string>
    <string name="perfect_information">完善资料</string>
    <string name="phone_number_email_address">手机号/邮箱</string>
    <string name="password">密码</string>
    <string name="please_enter_a_nickname">请输入昵称</string>
    <string name="please_enter_the_password">请输入密码</string>
    <string name="open_class_trip">开启蹭课之旅</string>
    <string name="get_verification_code">获取验证码</string>
    <string name="input_validation_code">请输入验证码</string>
    <string name="set_a_new_password">设置新密码</string>
    <string name="to_resend">重新发送</string>
    <string name="determine">确定</string>
    <string name="the_terms_of_service">蹭课服务条款</string>
    <string name="read_and_agree_to">我已阅读并同意</string>
    <string name="plese_phone_number">请输入手机号</string>
    <string name="plese_phone_validation_code">请输入手机验证码</string>
    <string name="next_step">下一步</string>
    <string name="enter_a_phone_number">填写手机号</string>

</resources>