<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EEEEEE"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@android:color/white"
        android:orientation="horizontal"
        android:padding="15dp" >

        <ImageView
            android:id="@+id/image_new_password_return"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@drawable/rub_course_back_icon"
            android:src="@drawable/rub_course_back_icon" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/set_a_new_password"
            android:textSize="17sp" />
    </LinearLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="7dp"
        android:background="#EEEEEE" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:padding="15dp" >

        <EditText
            android:id="@+id/edit_new_password_input_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:hint="@string/input_validation_code"
            android:inputType="phone"
            android:textSize="12sp" />

        <TextView
            android:id="@+id/text_new_password_to_resend"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:text="@string/to_resend"
            android:textSize="11sp" />

        <RelativeLayout
            android:id="@+id/layout_new_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true" >

            <TextView
                android:id="@+id/text_new_resend"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/to_resend"
                android:textSize="11sp" />

            <TextView
                android:id="@+id/text_new_password_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/text_new_resend"
                android:layout_toRightOf="@id/text_new_resend"
                android:text="(51)"
                android:textSize="11sp"
                android:visibility="gone" />
        </RelativeLayout>
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="#EEEEEE" />

    <EditText
        android:id="@+id/edit_new_password_password"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:hint="@string/set_a_new_password"
        android:inputType="textPassword"
        android:textSize="12sp"
        android:padding="15dp" />

    <Button
        android:id="@+id/button_new_password_determine"
        android:layout_width="fill_parent"
        android:layout_height="33dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/button_rounded_corners_and_solid"
        android:text="@string/determine"
        android:textColor="@android:color/white"
        android:textSize="12sp" />

</LinearLayout>