<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:background="@android:color/white"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/image_login_and_register_return"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@drawable/rub_course_back_icon"
            android:src="@drawable/rub_course_back_icon" />

        <TextView
            android:id="@+id/text_login_and_register_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/login_to_register"
            android:textSize="16sp" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <ImageView
            android:id="@+id/image_login_and_register_head_portrait"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="60dp"
            android:contentDescription="@drawable/register_and_login_icon"
            android:src="@drawable/register_and_login_icon" />

        <Button
            android:id="@+id/button_login_and_register_login"
            android:background="@drawable/button_rounded_corners_and_s"
            android:layout_width="fill_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="33dp"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:textColor="#ff8417"
            android:layout_marginBottom="60dp"
            android:text="@string/login" />

        <Button
            android:id="@+id/button_login_and_register_speed_registered"
            android:layout_width="fill_parent"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:layout_height="33dp"
            android:layout_above="@+id/button_login_and_register_login"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="10dp"
            android:textColor="@android:color/white"
            android:background="@drawable/button_rounded_corners_and_solid"
            android:text="@string/speed_registered" />

    </RelativeLayout>

</LinearLayout>